force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Class__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Class__c</fullName>
    <description>Classes provide a way to track different segments of the business, this can be enabled in Quick Books Online</description>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>