force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Invoice_URL__c</fullName>
    <formula>HYPERLINK( 
  &quot;https://&quot;&amp;IF( CONTAINS(breadwinner_qbo__QBO_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;) &amp;&quot;qbo.intuit.com/app/&quot;&amp;
    CASE(
       breadwinner_qbo__Type__c,

       &#39;Credit Memo&#39;, &quot;creditmemo?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Invoice_Id__c,(LEN(breadwinner_qbo__Invoice_Id__c)-FIND(&#39;-CM-&#39;, breadwinner_qbo__Invoice_Id__c) - 3 )),

       &#39;Sales Receipt&#39;, &quot;salesreceipt?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Invoice_Id__c,(LEN(breadwinner_qbo__Invoice_Id__c)-FIND(&#39;-SR-&#39;, breadwinner_qbo__Invoice_Id__c)- 3)),

       &#39;Refund Receipt&#39;, &quot;refundreceipt?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Invoice_Id__c,(LEN(breadwinner_qbo__Invoice_Id__c)-FIND(&#39;-RR-&#39;, breadwinner_qbo__Invoice_Id__c)- 3)),      
 
       &quot;invoice?txnId=&quot;&amp;RIGHT(breadwinner_qbo__Invoice_Id__c,(LEN(breadwinner_qbo__Invoice_Id__c)-FIND(&#39;-INV-&#39;, breadwinner_qbo__Invoice_Id__c) - 4 ))

       
    ),
  &quot;Click Here&quot;
)</formula>
    <label>See this Invoice in QuickBooks Online</label>
    <type>Text</type>
</CustomField>