force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>