force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Payment_Reference_Number__c</fullName>
    <description>Reference Number of related payment, when there are multiple references it shows &#39;Multiple Payments&#39;.</description>
    <label>Payment Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>