force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__QBO_Company__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__QBO_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QBO Company</label>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>