force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Status_Flag__c</fullName>
    <description>Red, Yellow or Green flag for QuickBooks Online Invoices, representing Overdue, Due, and Paid</description>
    <formula>IF(
  CONTAINS($User.UIThemeDisplayed, &#39;Theme4&#39;),

  IF( 
     ISBLANK( breadwinner_qbo__Internal_Status__c ),
     IF( OR(breadwinner_qbo__Status__c = &#39;Paid&#39;, breadwinner_qbo__Status__c = &#39;Closed&#39;),
    IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/green-flag.png&quot;, &quot;Paid&quot;),
    IF( breadwinner_qbo__Type__c = &#39;Credit Memo&#39;,
       IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/yellow-flag.png&quot;, &quot;Unapplied&quot;),
       IF( breadwinner_qbo__Amount_Overdue__c &gt; 0,
         IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/red-flag.png&quot;, &quot;Overdue&quot;) ,
         IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/yellow-flag.png&quot;, &quot;Open/Partial&quot; ) 
       )
    )
     ),
     IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/voided_deleted_36.png&quot;, &quot;Deleted / Voided&quot;)
  ),

  IF( 
     ISBLANK( breadwinner_qbo__Internal_Status__c ),
     IF( OR(breadwinner_qbo__Status__c = &#39;Paid&#39;, breadwinner_qbo__Status__c = &#39;Closed&#39;),
    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Paid&quot;, 16, 16),
    IF( breadwinner_qbo__Type__c = &#39;Credit Memo&#39;,
       IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Unapplied&quot;, 16, 16),
       IF( breadwinner_qbo__Amount_Overdue__c &gt; 0,
         IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Overdue&quot;, 16, 16) ,
         IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Open/Partial&quot;, 16, 16) 
       )
    )
      ),
      IMAGE(&quot;https://s3.amazonaws.com/cdn.breadwinner/voided_deleted.png&quot;, &quot;Deleted / Voided&quot;)
  )
)</formula>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>