force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/breadwinner_qbo__Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Sub_Total__c</fullName>
    <formula>IF(OR( breadwinner_qbo__Type__c==&#39;Credit Memo&#39;,breadwinner_qbo__Type__c==&#39;Refund Receipt&#39;),breadwinner_qbo__Credit_Memo_Total_Amount__c-breadwinner_qbo__Total_Tax__c-breadwinner_qbo__Shipping_Charges__c,breadwinner_qbo__Total__c +  breadwinner_qbo__Discount_Amount__c -  breadwinner_qbo__Total_Tax__c - breadwinner_qbo__Shipping_Charges__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>