force-app/main/default/objects/breadwinner_qbo__Invoice__c/fields/CRN_Number__c.field-meta.xml
<CustomField>
    <fullName>CRN_Number__c</fullName>
    <label>CRN Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>