force-app/main/default/objects/breadwinner_qbo__Invoice__c/listViews/breadwinner_qbo__Sales_Receipts.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__Sales_Receipts</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Status_Flag__c</columns>
    <columns>breadwinner_qbo__Status__c</columns>
    <columns>breadwinner_qbo__Account__c</columns>
    <columns>breadwinner_qbo__Invoice_Date__c</columns>
    <columns>breadwinner_qbo__Total__c</columns>
    <columns>breadwinner_qbo__Payment_Method__c</columns>
    <columns>breadwinner_qbo__Payment_Type__c</columns>
    <columns>breadwinner_qbo__Payment_Reference_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_qbo__Type__c</field>
        <operation>equals</operation>
        <value>Sales Receipt</value>
    </filters>
    <label>Sales Receipts</label>
</ListView>